--- a/luasrc/view/tailscale/log_buttons.htm
+++ b/luasrc/view/tailscale/log_buttons.htm
@@ -14,16 +14,18 @@
 <script type="text/javascript">
 function clearLog() {
     if (confirm('<%:Are you sure you want to clear the log display? This will not delete actual log files.%>')) {
-        var logContent = document.getElementById('widget.log_content') || document.querySelector('[id*="log_content"]');
+        var logContent = document.querySelector('textarea[id*="log_content"]');
         if (logContent) {
             logContent.value = '<%:Log display cleared. Refresh to view logs again.%>';
+        } else {
+            alert('<%:Could not find log content area%>');
         }
     }
 }
 
 function exportLog() {
-    var logContent = document.getElementById('widget.log_content') || document.querySelector('[id*="log_content"]');
-    if (logContent && logContent.value) {
+    var logContent = document.querySelector('textarea[id*="log_content"]');
+    if (logContent && logContent.value && logContent.value.trim().length > 0) {
         var blob = new Blob([logContent.value], { type: 'text/plain' });
         var url = window.URL.createObjectURL(blob);
         var a = document.createElement('a');
